Fixed an overflow Issue

--- a/proportal/static/src/CSS/projectPortal.css
+++ b/proportal/static/src/CSS/projectPortal.css
@@ -1,3 +1,6 @@
+body {
+    overflow-x: hidden;
+}
 #projectPortalTable {
     background-color: #333;
     color: #db0d0d;
